--- a/index.html
+++ b/index.html
@@ -6,9 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uber Clone</title>
     <link rel="stylesheet" href="style.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- notosans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- font-awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <div class="first-page">
+        <div class="navbar">
+            <div class="nav-left">
+                <div class="logo">Uber</div>
+                <a href="#">Ride</a>
+                <a href="#">Drive</a>
+                <a href="#">Business</a>
+                <a href="#">Uber Eats</a>
+                <a href="#">About</a>
+            </div>
+            <div class="nav-right">
+                <div class="icon"> <i class="fa-solid fa-globe"></i>EN</div>
+                <a href="#">Help</a>
+                <a href="#">Log In</a>
+                <a href="#">Sign Up</a>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
