--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="icon"> <i class="fa-solid fa-globe"></i>EN</div>
                 <a href="#">Help</a>
                 <a href="#">Log In</a>
-                <a href="#">Sign Up</a>
+                <a href="#"><button class="signUp">Sign Up</button></a>
             </div>
         </div>
     </div>
