--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
                 <a href="#"><button class="signUp">Sign Up</button></a>
             </div>
         </div>
+        <div class="left-box">
+            <div class="wrapper-left-box">
+                <h3 class="header">Go anywhere with <br> Uber</h3>
+                <p class="short-header">Request a ride, hop in, and go.</p>
+                <form action="#">
+                    <input type="text" name="pickup" id="pickup-form" placeholder="Enter location">
+                    <input type="text" name="dropoff" id="dropform" placeholder="Enter destination">
+                    <button class="header-form-btn">See Prices</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
