Added the image present on uber home page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 </form>
             </div>
         </div>
+        <div class="right-box">
+            <img src="./uberImg.webp" alt="">
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
