Added the initial markups for the dropdown menu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
         <div class="right-box">
             <img src="./uberImg.webp" alt="">
         </div>
+        <div class="dropdown">
+            <div class="wrapper-dropdown">
+                <div class="box">
+                    <p class="in-box">Sign up to drive & deliver</p> <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="box">
+                    <p class="in-box">Create a rider account</p> <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="box">
+                    <p class="in-box">Order delivery with Uber <br> Eats<i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+                <div class="box">
+                    <p class="in-box">Sign up for Uber for</p> <br> Business <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
