Added the items in the drop down menu

--- a/index.html
+++ b/index.html
@@ -57,16 +57,18 @@
         <div class="dropdown">
             <div class="wrapper-dropdown">
                 <div class="box">
-                    <p class="in-box">Sign up to drive & deliver</p> <i class="fa-solid fa-arrow-right"></i>
+                    <p class="in-box">Sign up to drive & deliver <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="box">
-                    <p class="in-box">Create a rider account</p> <i class="fa-solid fa-arrow-right"></i>
+                    <p class="in-box temp">Create a rider account <i class="fa-solid fa-arrow-right pos-3"></i></p>
                 </div>
                 <div class="box">
-                    <p class="in-box">Order delivery with Uber <br> Eats<i class="fa-solid fa-arrow-right"></i></p>
+                    <p class="in-box">Order delivery with Uber <br> Eats<i class="fa-solid fa-arrow-right pos-1"></i>
+                    </p>
                 </div>
                 <div class="box">
-                    <p class="in-box">Sign up for Uber for</p> <br> Business <i class="fa-solid fa-arrow-right"></i>
+                    <p class="in-box">Sign up for Uber for <br> Business <i class="fa-solid fa-arrow-right pos-2"></i>
+                    </p>
                 </div>
             </div>
         </div>
