Added the closing button to the dropdown

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
         <div class="dropdown">
             <div class="wrapper-dropdown">
+                <i class="fa-solid fa-xmark xmark"></i>
                 <div class="box">
                     <p class="in-box">Sign up to drive & deliver <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
