--- a/index.html
+++ b/index.html
@@ -74,6 +74,25 @@
             </div>
         </div>
     </div>
+    <div class="second-page">
+        <div class="wrapper-left">
+            <div class="inner-wrapper">
+                <img src="./uber image 2.webp" alt="image-of-UberDriver">
+            </div>
+        </div>
+        <div class="wrapper-right">
+            <div class="inner-wrapper-text">
+                <h3 class="second-page-header">Drive when you want, make what <br> you need</h3>
+                <p class="second-page-para">Make money on your schedule with deliveries or rides—or <br> both. You can
+                    use
+                    your own car or choose a rental <br> through Uber.</p>
+                <div class="second-para-container">
+                    <button class="second-pagebtn">Get Started</button>
+                    <a href="#" class="second-page-link">Already have an account? Sign in</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
