--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="second-page">
         <div class="wrapper-left">
             <div class="inner-wrapper">
-                <img src="./uber image 2.webp" alt="image-of-UberDriver">
+                <img src="./imgUber.webp" alt="image-of-UberDriver">
             </div>
         </div>
         <div class="wrapper-right">
