Added the third page

--- a/index.html
+++ b/index.html
@@ -93,6 +93,23 @@
             </div>
         </div>
     </div>
+    <div class="third-page">
+        <div class="th-wrapper-left">
+            <div class="inner-th-wrapper">
+                <h3 class="th-header">
+                    The Uber you know, reimagined <br>for business
+                </h3>
+                <p class="th-para">
+                    Uber for Business is a platform for managing global rides and <br> meals, and local deliveries, for
+                    companies of any size.
+                </p>
+                <div class="th-para-container">
+                    <button class="th-pagebtn">Get Started</button>
+                    <a href="#" class="th-page-link">Check out our solutions</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
