Added the image to the third-block

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                 </div>
             </div>
         </div>
+        <div class="th-wrapper-right">
+            <div class="th-inner-wrapper-right">
+                <img src="./img-th.webp" alt="image of uber rider getting off">
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
