Added the markup for the fourth block

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="th-wrapper-left">
             <div class="inner-th-wrapper">
                 <h3 class="th-header">
-                    The Uber you know, reimagined <br>for business
+                    The Uber you <br> know, reimagined <br>for business
                 </h3>
                 <p class="th-para">
                     Uber for Business is a platform for managing global rides and <br> meals, and local deliveries, for
@@ -112,6 +112,25 @@
         <div class="th-wrapper-right">
             <div class="th-inner-wrapper-right">
                 <img src="./img-th.webp" alt="image of uber rider getting off">
+            </div>
+        </div>
+    </div>
+    <div class="ft-page">
+        <div class="ft-wrapper-left">
+            <div class="ft-inner-wrapper">
+                <img src="./image4.webp" alt="image-of-UberDriver">
+            </div>
+        </div>
+        <div class="ft-wrapper-right">
+            <div class="ft-inner-wrapper-text">
+                <h3 class="ft-page-header">Make money by renting out <br>your car</h3>
+                <p class="ft-page-para">Make money on your schedule with deliveries or rides—or <br> both. You can
+                    use
+                    your own car or choose a rental <br> through Uber.</p>
+                <div class="ft-para-container">
+                    <button class="ft-pagebtn">Get Started</button>
+                    <a href="#" class="ft-page-link">Already have an account? Sign in</a>
+                </div>
             </div>
         </div>
     </div>
