Added the initial markups for footer

--- a/index.html
+++ b/index.html
@@ -134,6 +134,36 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="col1">
+            <div class="upper">
+                <p class="header">Uber</p>
+                <p class="text">Visit help center</p>
+            </div>
+            <div class="lower">
+                <div class="item1">Company</div>
+                <div class="item2">About Us </div>
+                <div class="item3"> Our offerings</div>
+                <div class="item4">Newsroom</div>
+                <div class="item5">Investors</div>
+                <div class="item6">Blog </div>
+                <div class="item7">Careers</div>
+                <div class="item8">AI</div>
+                <div class="item9">Gift Cards</div>
+            </div>
+        </div>
+        <div class="col2">
+            <div class="item1">Products</div>
+            <div class="item2">Ride</div>
+            <div class="item3">Drive</div>
+            <div class="item4">Deliver</div>
+            <div class="item5">Eats</div>
+            <div class="item6">Uber for business</div>
+            <div class="item7">Uber freight</div>
+        </div>
+        <div class="col3"></div>
+        <div class="col4"></div>
+    </div>
     <script src="app.js"></script>
 </body>
 
