Added the footer icons

--- a/index.html
+++ b/index.html
@@ -161,8 +161,26 @@
             <div class="item6">Uber for business</div>
             <div class="item7">Uber freight</div>
         </div>
-        <div class="col3"></div>
-        <div class="col4"></div>
+        <div class="col3">
+            <div class="item1">Global citizenship</div>
+            <div class="item2">Safety</div>
+            <div class="item3">Diversity and Inclusion </div>
+            <div class="item4">Sustainability</div>
+        </div>
+        <div class="col4">
+            <div class="item1">Travel</div>
+            <div class="item2">Rserve</div>
+            <div class="item3">Airports</div>
+        </div>
+        <div class="icons">
+            <div class="left-icons"><i class="fa-brands fa-square-facebook fb"></i><i
+                    class="fa-brands fa-x-twitter x"></i><i class="fa-brands fa-youtube yt"></i><i
+                    class="fa-brands fa-linkedin li"></i><i class="fa-brands fa-instagram insta"></i></div>
+            <div class="right-icons">
+                <p class="f1"><i class="fa-solid fa-globe"></i> English</p>
+                <p class="f2"><i class="fa-solid fa-location-pin"></i> Guwahati</p>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
